test/libsolidity/syntaxTests/constructor/external_constructor.sol
contract test {
	constructor() external {}
}
// ----
// TypeError 9239: (17-42='constructor() external {}'): Constructor cannot have visibility.
